--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,12 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+#navbar-musicmates {
+  background-color: #2B3A67;
+}
+
+.navbar-brand {
+  margin-left: 13px;
+  color: white;
+}
