--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <nav class="navbar" id="navbar-musicmates">
+      <a class="navbar-brand" href="#">
+      <img src="https://logopond.com/logos/c7f6e5d47c03813042ae572a1e8aa094.png" width="40" height="40" class="d-inline-block align-center" alt="">    MusicMates</a>
+    </nav>
     <%= yield %>
   </body>
 </html>
