--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,3 +4,7 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "search";
+@import "body";
+@import "footer";
+@import "icons";
+@import "concert_index";
