--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -1,9 +1,11 @@
 .search {
   margin: 0 auto;
   margin-top: 15px;
-  width: 360px;
+  margin-bottom: 10px;
+  width: 330px;
   border: 2px solid #2B3A67;
-  border-radius: 5px;
+  border-radius: 18px;
+  box-shadow: 1px 1px lightgrey;
 }
 
 .search .form-control {
@@ -13,4 +15,8 @@
 .search img {
   height: 20px;
   width: 20px;
+}
+
+#query {
+  border-radius: 18px;
 }
