updated landing page

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,7 +1,7 @@
 <div id="landing-container" class="container">
-  <%=image_tag "logo.jpg", width: 300, height: 100 %>
+  <%=image_tag "mmlogo.png", width: 300, height: 100 %>
   <p>An online community based around your music taste.
   <br>Click below and see what concerts are near you,
    <br>and meet likeminded music lovers.</p>
-  <%= link_to "Poke Me", "#", class:"btn btn-primary"%>
+  <%= link_to "Poke Me", new_user_session_path, class:"btn btn-primary"%>
 </div>
