--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -32,3 +32,10 @@
   </div>
 <% end %>
 </div>
+
+<div class="footer-musicmates">
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="icons"><i class="fa-solid fa-house"></i></a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="icons"><i class="fa-solid fa-clipboard-list"></i></a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="icons"><i class="fa-solid fa-envelope"></i></a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="icons"><i class="fa-solid fa-user"></i></a>
+</div>
