--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,7 +1,6 @@
-<div id="landing-container" class="container">
-  <%=image_tag "logo.jpg", width: 300, height: 100 %>
-  <p>An online community based around your music taste.
-  <br>Click below and see what concerts are near you,
-   <br>and meet likeminded music lovers.</p>
-  <%= link_to "Poke Me", "#", class:"btn btn-primary"%>
+<div id="landing-container">
+  <%=image_tag "logo.jpg", width: 330 %>
+  <p id="p1">An online community based around your music taste.</p>
+  <p id="p2">Click below and see what concerts are near you, and meet likeminded music lovers.</p>
+  <%= link_to "Poke Me", "#", id:"landing-btn" %>
 </div>
