--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -9,3 +9,14 @@
   justify-content: space-around;
   align-items: center;
 }
+
+.footer-space {
+  height: 50px;
+  background-color: #2B3A67;
+  bottom: 0px;
+  position: absolute;
+}
+
+:target {
+  color: #00e070;
+}
