--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -13,7 +13,6 @@
 <% end %>
 </div>
 
-<div class="concerts-wrap">
 <% @concerts.each do |concert| %>
   <div class="concert-card">
     <div class="concert-info">
@@ -31,11 +30,12 @@
     </div>
   </div>
 <% end %>
-</div>
+
+<div class="footer-space"></div>
 
 <div class="footer-musicmates">
-  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="icons"><i class="fa-solid fa-house"></i></a>
-  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="icons"><i class="fa-solid fa-clipboard-list"></i></a>
-  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="icons"><i class="fa-solid fa-envelope"></i></a>
-  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="icons"><i class="fa-solid fa-user"></i></a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" id="#target1" class="icons target"><i class="fa-solid fa-house"></i></a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" id="#target2" class="icons target"><i class="fa-solid fa-clipboard-list"></i></a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" id="#target3" class="icons target"><i class="fa-solid fa-envelope"></i></a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" id="#target4" class="icons target"><i class="fa-solid fa-user"></i></a>
 </div>
