--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -1,3 +1,6 @@
+<div class="navbar-space"></div>
+<%= render "shared/navbar" %>
+
 <div class="search">
 <div class="search-bar">
 <%= form_with url: concerts_path, method: :get, class: "d-flex" do %>
