--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -1,3 +1,6 @@
+<div class="navbar-space"></div>
+<%= render "shared/navbar" %>
+
 <div class="show">
   <img src="https://koreajoongangdaily.joins.com/data/photo/2022/08/12/4061635e-b480-467b-90f5-cab3f8d64e5c.jpg" alt="IU Concert" class="show-image" >
   <h1 id="show-h1"><%= @concert.artist.name %></h1>
