--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,6 +1,6 @@
 <div id="landing-container">
-  <%=image_tag "logo.jpg", width: 330 %>
-  <p id="p1">An online community based around your music taste.</p>
+  <%=image_tag "logo.jpg", width: 350 %>
+  <p id="p1">An online community based around your music taste. MusicMates is <strong>THE</strong> social platform for you!</p>
   <p id="p2">Click below and see what concerts are near you, and meet likeminded music lovers.</p>
   <%= link_to "Poke Me", "#", id:"landing-btn" %>
 </div>
