--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,3 +1,6 @@
+<div class="navbar-space"></div>
+<%= render "shared/navbar" %>
+
 <div class="container chatroom" data-controller="chatroom-subscription" data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
   <h1>#<%= @chatroom.name %></h1>
 
@@ -19,3 +22,12 @@
 </div>
 
 <!-- HEROKU needs to install redis. Check the lecture notes on Chat-->
+
+<div class="footer-space"></div>
+
+<div class="footer-musicmates">
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="icons"><i class="fa-solid fa-house"></i></a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="icons"><i class="fa-solid fa-clipboard-list"></i></a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="icons"><i class="fa-solid fa-envelope"></i></a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank" class="icons"><i class="fa-solid fa-user"></i></a>
+</div>
