changed a tags to link_to format + navbar link

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -17,6 +17,12 @@
   position: absolute;
 }
 
+#concert-index-footer {
+  height: 50px;
+  background-color: #2B3A67;
+  bottom: 0px;
+}
+
 :target {
   color: #00e070;
 }
