--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
+    <%= link_to "/concerts", class: "navbar-brand" do %>
       <%= image_tag "https://ar.toneden.io/27590134/0657b757-3f69-4696-9744-d0c0be1e0ed7"%>
       <%= "MusicMates" %>
     <% end %>
