spotify login button + message

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -12,14 +12,14 @@
 
 .footer-space {
   height: 50px;
-  background-color: #2B3A67;
+  background-color: white;
   bottom: 0px;
   position: absolute;
 }
 
 #concert-index-footer {
   height: 50px;
-  background-color: #2B3A67;
+  background-color: white;
   bottom: 0px;
 }
 
