--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -9,6 +9,12 @@
   text-align: center;
   position: relative;
 
+  h5 {
+    margin-top: 13px;
+    font-size: 11px;
+    color:#00e070;
+  }
+
   img {
     margin-left: 25px;
     top: 240px;
