--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -2,5 +2,6 @@
   <%=image_tag "logo.jpg", width: 350 %>
   <p id="p1">An online community based around your music taste. MusicMates is <strong>THE</strong> social platform for you!</p>
   <p id="p2">Click below and see what concerts are near you, and meet likeminded music lovers.</p>
-  <%= link_to "Poke Me", "#", id:"landing-btn" %>
+  <%= link_to "Login with Spotify", "#", id:"landing-btn" %>
+  <h5>*Spotify account required for MusicMates.</h5>
 </div>
