--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,7 +1,8 @@
 <div id="landing-container">
   <%=image_tag "logo.jpg", width: 350 %>
-  <p id="p1">An online community based around your music taste. MusicMates is <strong>THE</strong> social platform for you!</p>
-  <p id="p2">Click below and see what concerts are near you, and meet likeminded music lovers.</p>
+  <p id="p1">Mingle with your <strong>MATES</strong></p>
+  <p id="p2">Find concerts for your <strong>MUSIC</strong>.</p>
+  <p>Be a <strong>MUSIC MATE</strong></p>
   <%= link_to "Login with Spotify", "#", id:"landing-btn" %>
   <h5>*Spotify account required for MusicMates.</h5>
 </div>
