Style somewhat done

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,12 +1,14 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "body";
+@import "chatbox";
+@import "chatroom";
+@import "concert_index";
+@import "footer";
 @import "form_legend_clear";
+@import "icons";
+@import "message";
 @import "navbar";
 @import "search";
 @import "show";
-@import "body";
-@import "footer";
-@import "icons";
-@import "concert_index";
-@import "chatroom"
