--- a/app/views/chatrooms/_chatbox.html.erb
+++ b/app/views/chatrooms/_chatbox.html.erb
@@ -1,7 +1,12 @@
+<!-- IF YOU ARE GOING TO STYLE THIS, LET MICAH KNOW! THERE IS EXTRA STYLING IN JAVASCRIPT-->
 <div class="container chatroom" data-controller="chatroom-subscription" data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
   <div class="messages" data-chatroom-subscription-target="messages">
     <% chatroom.messages.each do |msg| %>
-      <%= render "messages/message", message: msg %>
+      <div class="message-row d-flex <%= msg.sender?(current_user) ? 'justify-content-end' : 'justify-content-start' %>">
+        <div class="<%= msg.sender?(current_user) ? 'sender-style' : 'receiver-style' %>">
+          <%= render "messages/message", message: msg %>
+        </div>
+      </div>
     <% end %>
   </div>
   <%= simple_form_for [group, chatroom, message],
