links all gravy

--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -39,7 +39,7 @@
 </div>
 
 <div id="show-btn-container">
-<%= link_to "Create a group!", "#", id:"show-btn" %>
+<%= link_to "Create a group!", new_concert_group_path(@concert), id:"show-btn" %>
 </div>
 
 
