--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -3,6 +3,6 @@
   <p id="p1">Mingle with your <strong>MATES</strong></p>
   <p id="p2">Find concerts for your <strong>MUSIC</strong>.</p>
   <p>Be a <strong>MUSIC MATE</strong></p>
-  <%= link_to "Login with Spotify", "#", id:"landing-btn" %>
+  <%= link_to "Login with Spotify", concerts_path, id:"landing-btn" %>
   <h5>*Spotify account required for MusicMates.</h5>
 </div>
