Basic style set up

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,6 +8,7 @@
 @import "footer";
 @import "form_legend_clear";
 @import "icons";
+@import "invitations";
 @import "message";
 @import "navbar";
 @import "search";
