--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -2,7 +2,7 @@
 <%= render "shared/navbar" %>
 
 <div class="search">
-  <%= render "search-bar" %>
+  <%= render "shared/search-bar" %>
 </div>
 
 <% @concerts.each do |concert| %>
