--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -20,8 +20,8 @@ Hello?
 <div class="chatbox">
   <%= render "chatrooms/chatbox", chatroom: @chatroom, message: @message, group: @group %>
 </div>
-<!--
-<div id="concert-index-footer"></div>
+
+<div class="footer-space"></div>
 
 <div class="footer-musicmates">
   <%= link_to "/concerts", class: "icons target", id: "target1" do %>
@@ -37,4 +37,3 @@ Hello?
     <i class="fa-solid fa-user"></i>
   <% end %>
 </div>
--->
