--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -21,7 +21,7 @@ Hello?
   <%= render "chatrooms/chatbox", chatroom: @chatroom, message: @message, group: @group %>
 </div>
 
-<div class="footer-space"></div>
+<div id="concert-chat-footer"></div>
 
 <div class="footer-musicmates">
   <%= link_to "/concerts", class: "icons target", id: "target1" do %>
