--- a/app/assets/stylesheets/components/_invitations.scss
+++ b/app/assets/stylesheets/components/_invitations.scss
@@ -2,6 +2,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
   h1 {
     text-align: center;
     color: #2b3a67;
@@ -9,10 +10,12 @@
     margin-bottom: 10px;
     font-size: 14;
   }
+
   h4 {
     text-align: center;
     font-size: 14px;
   }
+
   .status-buttons {
   text-align: center;
   display: flex;
@@ -22,6 +25,7 @@
   white-space: normal;
   align-items: center;
   width: 300px;
+
   .btn-accept {
     background-color: #00e070;
     border: 1px solid #00e070;
@@ -33,6 +37,7 @@
     text-align: center;
     width: 100px;
     margin: auto;
+
   }
   .btn-accept:focus {
     background-color: #2b3a67;
@@ -40,6 +45,7 @@
     transform: translateY(-0.15em);
     box-shadow: 0 0.5px 0.5px #00e070;
   }
+
   .btn-decline{
     background-color: #2b3a67;
     border: 1px solid #2b3a67;
@@ -51,9 +57,10 @@
     text-align: center;
     width: 100px;
     margin: auto;
+
   }
   .btn-decline:focus{
-    background-color: lightcoral;
+    background-color: #00e070;
     border: 1px solid white;
     transform: translateY(-0.15em);
     box-shadow: 0 0.5px 0.5px #00e070;
