--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -1,10 +1,12 @@
 .show {
+
   img {
     width: 375px;
     height: 200px;
     object-fit: cover;
     display: block;
   }
+
   h1 {
     text-align: center;
     color: #2b3a67;
@@ -48,16 +50,19 @@
   box-shadow: 1px 1px lightgrey;
   justify-content: space-around;
   align-items: center;
+
   .show-detail{
     padding: 3px;
     justify-content: left;
     flex-grow: 1;
+
     h2 {
       font-weight: 500;
       font-size: 14px;
       color: white;
       margin-bottom: 3px;
     }
+
     h3 {
       font-size: 12px;
       font-weight: 300;
@@ -65,6 +70,7 @@
       margin-bottom: 0;
     }
   }
+
   .show-emoji {
     width: 65px;
     font-size: 34px;
@@ -98,16 +104,19 @@
   box-shadow: 1px 1px lightgrey;
   justify-content: space-around;
   align-items: center;
+
   .show-detail{
     padding: 3px;
     justify-content: left;
     flex-grow: 1;
+
     h2 {
       font-weight: 500;
       font-size: 14px;
       color: white;
       margin-bottom: 3px;
     }
+
     h3 {
       font-size: 12px;
       font-weight: 300;
@@ -115,6 +124,7 @@
       margin-bottom: 0;
     }
   }
+
   .show-emoji {
     width: 50px;
     font-size: 34px;
@@ -135,11 +145,10 @@
   transition: all 0.33s;
 }
 
-#show-btn:focus {
-  background-color: #2b3a67;;
-  border: 1px solid white;
-  transform: scale(1.01);
-  box-shadow: 0 0.5px 0.5px #00e070;
+#show-btn:active {
+  background-color: #00e070;
+  border: 2px solid white;
+  transform: scale(1.02);
 }
 
 #show-btn-container {
