--- a/app/assets/stylesheets/components/_invitations.scss
+++ b/app/assets/stylesheets/components/_invitations.scss
@@ -27,8 +27,8 @@
   width: 300px;
 
   .btn-accept {
-    background-color: #00e070;
-    border: 1px solid #00e070;
+    background-color: $success;
+    border: 1px solid $success;
     border-radius: 7px;
     color: white;
     text-decoration: none;
@@ -43,7 +43,7 @@
     background-color: #2b3a67;
     border: 1px solid white;
     transform: translateY(-0.15em);
-    box-shadow: 0 0.5px 0.5px #00e070;
+    box-shadow: 0 0.5px 0.5px $success;
   }
 
   .btn-decline{
@@ -60,10 +60,10 @@
 
   }
   .btn-decline:focus{
-    background-color: #00e070;
+    background-color: $success;
     border: 1px solid white;
     transform: translateY(-0.15em);
-    box-shadow: 0 0.5px 0.5px #00e070;
+    box-shadow: 0 0.5px 0.5px $success;
   }
 }
 }
