--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -33,10 +33,10 @@
   <%= link_to "/concerts", class: "icons target", id: "target1" do %>
     <i class="fa-solid fa-house"></i>
   <% end %>
-  <%= link_to "/concerts", class: "icons target", id: "target2" do %>
-    <i class="fa-solid fa-clipboard-list"></i>
+  <%= link_to "/groups", class: "icons target", id: "target2" do %>
+    <i class="fa-solid fa-clipboard-list text-success"></i>
   <% end %>
-  <%= link_to "/concerts", class: "icons target", id: "target3" do %>
+  <%= link_to "/invitations", class: "icons target", id: "target3" do %>
     <i class="fa-solid fa-envelope"></i>
   <% end %>
   <%= link_to "/concerts", class: "icons target", id: "target4" do %>
