--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -133,8 +133,8 @@
 }
 
 #show-btn {
-  background-color: #00e070;
-  border: 1px solid #00e070;
+  background-color: $success;
+  border: 1px solid $success;
   width: 65%;
   text-align: center;
   border-radius: 7px;
@@ -146,7 +146,7 @@
 }
 
 #show-btn:active {
-  background-color: #00e070;
+  background-color: $success;
   border: 2px solid white;
   transform: scale(1.02);
 }
