--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -49,10 +49,10 @@
   <%= link_to "/concerts", class: "icons target", id: "target1" do %>
     <i class="fa-solid fa-house"></i>
   <% end %>
-  <%= link_to "/concerts", class: "icons target", id: "target2" do %>
+  <%= link_to "/groups", class: "icons target", id: "target2" do %>
     <i class="fa-solid fa-clipboard-list"></i>
   <% end %>
-  <%= link_to "/concerts", class: "icons target", id: "target3" do %>
+  <%= link_to "/invitations", class: "icons target", id: "target3" do %>
     <i class="fa-solid fa-envelope"></i>
   <% end %>
   <%= link_to "/concerts", class: "icons target", id: "target4" do %>
